@@ -44,6 +44,15 @@ IMG_RGB_3C_16B=${IMAGES}/rgb-3c-16b.tiff
 IMG_RGB_3C_8B=${IMAGES}/rgb-3c-8b.tiff
 IMG_MINISBLACK_2C_8B_ALPHA=${IMAGES}/minisblack-2c-8b-alpha.tiff
 
+IMG_PALETTE_1C_8B_BMP=${IMAGES}/palette-1c-8b.bmp
+IMG_RGB_3C_8B_BMP=${IMAGES}/rgb-3c-8b.bmp
+
+IMG_PALETTE_1C_8B_GIF=${IMAGES}/palette-1c-8b.gif
+
+IMG_MINISWHITE_1C_1B_PBM=${IMAGES}/miniswhite-1c-1b.pbm
+IMG_MINISBLACK_1C_8B_PGM=${IMAGES}/minisblack-1c-8b.pgm
+IMG_RGB_3C_8B_PPM=${IMAGES}/rgb-3c-8b.ppm
+
 # All uncompressed image files
 IMG_UNCOMPRESSED="${IMG_MINISBLACK_1C_16B} ${IMG_MINISBLACK_1C_8B} ${IMG_MINISWHITE_1C_1B} ${IMG_PALETTE_1C_1B} ${IMG_PALETTE_1C_4B} ${IMG_PALETTE_1C_4B} ${IMG_PALETTE_1C_8B} ${IMG_RGB_3C_8B}"
 
